# capstone-juara-satu

./: .gitignore  README.md
backend/: config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  testemail.py
backend/alembic/: env.py
backend/alembic/versions/: 05766e9777db_init.py  acea596a69db_mlscore.py
backend/routers/: admins.py  tickets.py
backend/services/: email_utils.py  llm_helper.py  ml_service.py  risk_score.py  ticket_service.py  whitelist_check.py
backend/templates/: ticket_id.html  ticket_selesai.html
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminSidebar.jsx  Badges.jsx  Footer.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  TicketContext.jsx
frontend/src/data/: dummyData.js
frontend/src/pages/admin/: DashboardPage.jsx  LoginPage.jsx  TicketDetailPage.jsx  TicketingPage.jsx
frontend/src/pages/nasabah/: LandingPage.jsx  LaporanPage.jsx
