[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "groq>=1.2.0",
    "mailtrap>=2.6.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
